# opensky

./: Cargo.toml
src/: endpoints.rs  lib.rs  opensky.rs  structs.rs
src/endpoints/: flights.rs  states.rs  track.rs
src/endpoints/flights/: aircraft.rs  all.rs  arrival.rs  departure.rs
src/endpoints/states/: all.rs  own.rs
