[package]
name = "opensky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_binding = "0.1.2"
base64 = { version = "0.21.2", features = ["alloc"] }
chrono = "0.4.26"
derive-getters = "0.3.0"
derive_builder = "0.12.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
